Version 1.1.1 (?? ??? 2006)
 - Fixed bug 1541558: Non-users ignore "NONUSER_AT_TOP" during import
 - Fixed bug 1532286: UAC settings of 'admins' will be overwritten
 - Fixed bug 1538312: get_my_users() may return incorrect cached data
 - Fixed bug 1538669: UAC issue with "invite" permissions vs "view"
 - Fixed bug 1540251: Activity log wrong for imported entries
 - Fixed bug 1538055: UAC for "Default Configuration" does not show correct values
 - Fixed bug 1539899: postgres problem
 - Fixed bug 1538718: Logic typo in 'view_entry.php'
 - Fixed bug 1536702: Repeated events don't show up in Availability window
 - Fixed bug 1536755: Activity Log for single event shows incorrect time
 - Fixed bug 1536785: Activity Log Report only shows times in GMT
 - Fixed bug 1521837: no entries for 'deleted entries' at 'activity.log'
 - Fixed bug 1522560: 'Scheduling Conflict events' will be displayed in mixed
 - Fixed bug 1530179: 'Public Access' using UAC will not be translated
 - Fixed bug 1518552: PHP5 and MySQLi Warnings
 - Fixed bug 1520002: 'top-menue' are not at the left-margin for year.php
 - Fixed bug 1516114: Javascript top menu does'nt work in french
 - Added hCalendar feature to Remote Calendars
 - Fixed bug 1513448: Cannot Display Attachment
 - Fixed bug 1511337: time-stamps at the 'activity-log' are incorrect
 - Fixed bug 1511120: 'unapproved-icon' in 'top-menue' not properly displayed
 - Fixed bug 1510761: missing 'back to my calendar' in the 'top-menue'
 - Fixed bug 1497931: Weird repeating events - read on
 - Fixed bug 1509045: repeated events seem to be shown out of order
 - Fixed bug 1510599: Adding event to public access error.
 - Fixed bug 1508681: 'convert to GMT' - button is missing
 - Fixed bug 1507985: event participant shown in public popup
 - Fixed bug 1506417: user-imap.php (rev 1.10) gave me a parse error on line 151
 - Changed view_t.php to use $ENTRY_SLOT value and improve event placement