@@ -324,40 +324,42 @@ if ( $readonly == 'Y' || $is_nonuser ) {
    dbi_free_result ( $res );
     }
   }
-  //get global categories
-  $sql = 'SELECT  webcal_entry_categories.cat_id, cat_name ' .
-    ' FROM webcal_entry_categories, webcal_categories ' .
-    ' WHERE webcal_entry_categories.cat_id = webcal_categories.cat_id AND ' .
-    ' webcal_entry_categories.cal_id = ?  AND ' . 
-    ' webcal_categories.cat_owner IS NULL ';
-  $res = dbi_execute ( $sql, array( $id ) );
-  if ( $res ) {
-    while ( $row = dbi_fetch_row ( $res ) ) {
-     $cat_id[] = '-' .$row[0];
-     $cat_name[] = $row[1] . '*';    
-    }
-  dbi_free_result ( $res );
- }
-  //get user's categories 
-  $sql = 'SELECT  webcal_entry_categories.cat_id, ' .
-    ' webcal_entry_categories.cat_owner, webcal_entry_categories.cat_order, cat_name ' .
-    ' FROM webcal_entry_categories, webcal_categories ' .
-    ' WHERE ( webcal_entry_categories.cat_id = webcal_categories.cat_id AND ' .
-    ' webcal_entry_categories.cal_id = ? ) AND ' . 
-    ' webcal_categories.cat_owner = ?'.
-    ' ORDER BY webcal_entry_categories.cat_order';
-  $res = dbi_execute ( $sql, array( $id, $real_user ) );
-  if ( $res ) {
-    while ( $row = dbi_fetch_row ( $res ) ) {
-      if ( empty ( $user ) || $login == $user || $is_assistant  || $is_admin ) {
-        $cat_id[] = $row[0];
-        $cat_name[] = $row[3];    
+  if ( $CATEGORIES_ENABLED == 'Y' ) {
+    //get global categories
+    $sql = 'SELECT  webcal_entry_categories.cat_id, cat_name ' .
+      ' FROM webcal_entry_categories, webcal_categories ' .
+      ' WHERE webcal_entry_categories.cat_id = webcal_categories.cat_id AND ' .
+      ' webcal_entry_categories.cal_id = ?  AND ' . 
+      ' webcal_categories.cat_owner IS NULL ';
+    $res = dbi_execute ( $sql, array( $id ) );
+    if ( $res ) {
+      while ( $row = dbi_fetch_row ( $res ) ) {
+       $cat_id[] = '-' .$row[0];
+       $cat_name[] = $row[1] . '*';    
       }
-    }
     dbi_free_result ( $res );
-    if ( ! empty ( $cat_name ) ) $catNames = implode(',' , array_unique($cat_name));
-    if ( ! empty ( $cat_id ) ) $catList = implode(',', array_unique($cat_id));
-  }
+   }
+    //get user's categories 
+    $sql = 'SELECT  webcal_entry_categories.cat_id, ' .
+      ' webcal_entry_categories.cat_owner, webcal_entry_categories.cat_order, cat_name ' .
+      ' FROM webcal_entry_categories, webcal_categories ' .
+      ' WHERE ( webcal_entry_categories.cat_id = webcal_categories.cat_id AND ' .
+      ' webcal_entry_categories.cal_id = ? ) AND ' . 
+      ' webcal_categories.cat_owner = ?'.
+      ' ORDER BY webcal_entry_categories.cat_order';
+    $res = dbi_execute ( $sql, array( $id, $real_user ) );
+    if ( $res ) {
+      while ( $row = dbi_fetch_row ( $res ) ) {
+        if ( empty ( $user ) || $login == $user || $is_assistant  || $is_admin ) {
+          $cat_id[] = $row[0];
+          $cat_name[] = $row[3];    
+        }
+      }
+      dbi_free_result ( $res );
+      if ( ! empty ( $cat_name ) ) $catNames = implode(',' , array_unique($cat_name));
+      if ( ! empty ( $cat_id ) ) $catList = implode(',', array_unique($cat_id));
+    }
+  } //end CATEGORIES_ENABLED test
 
   //get reminders 
   $reminder = getReminders ( $id ); 
@@ -628,7 +630,7 @@ if ( $DISABLE_PRIORITY_FIELD != 'Y' ) { ?>
       </select>
      </td></tr>
 <?php } 
-if ( ! empty ( $categories ) ) { ?>
+if ( ! empty ( $categories ) && $CATEGORIES_ENABLED == 'Y' ) { ?>
   <tr><td class="tooltip" title="<?php etooltip( 'category-help' )?>" valign="top">
    <label for="entry_categories"><?php etranslate( 'Category' )?>:<br /></label>
    <input type="button" value="<?php etranslate( 'Edit' ) ?>" onclick="editCats(event)" />
