@@ -1,4 +1,5 @@
 Version 1.1.1 (?? ??? 2006)
+ - Fixed bug 1522357: after upgrading 'categories' are enabled
  - Fixed bug 1541558: Non-users ignore "NONUSER_AT_TOP" during import
  - Fixed bug 1532286: UAC settings of 'admins' will be overwritten
  - Fixed bug 1538312: get_my_users() may return incorrect cached data
